# ai-coding-agent-langgraph-flask-docker

./: .dockerignore  CONTEXT.md  Dockerfile  README.md  main.py  models.py  pyproject.toml  webapp.py
agent/: llm_setup.py  local_tools.py  mcp_adapter.py  prompts.py  system_mappings.py  task_connector.py  utils.py  worker.py
agent/nodes/: coder.py
templates/: index.html
