[project]
name = "ai-coding-agent-langchain-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.1",
    "flask>=3.1.2",
    "flask-apscheduler>=1.13.1",
    "flask-sqlalchemy>=3.1.1",
    "langchain>=1.0.8",
    "langchain-core>=1.1.0",
    "mcp>=1.22.0",
    "requests>=2.32.5",
]
